--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Virginia -- History -- Civil War, 1861-1865 -- Fiction'
 - !lcsh 'Richmond (Va.) -- Fiction'
+- GITenberg
 title: "Secret Service\r\nBeing the Happenings of a Night in Richmond in the Spring\
   \ of 1865"
 url: http://www.gutenberg.org/ebooks/44659
